--- a/ios/App/App/Info.plist
+++ b/ios/App/App/Info.plist
@@ -50,5 +50,9 @@
 	</array>
 	<key>UIViewControllerBasedStatusBarAppearance</key>
 	<true/>
+	<key>UIFileSharingEnabled</key>
+	<true/>
+	<key>LSSupportOpeningDocumentsInPlace</key>
+	<true/>
 </dict>
 </plist>
