--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "@awesome-cordova-plugins/core": "^5.43.0",
+    "@awesome-cordova-plugins/file": "^5.43.0",
     "@awesome-cordova-plugins/media": "^5.43.0",
     "@capacitor/android": "3.5.1",
     "@capacitor/app": "1.0.7",
     "@capacitor/core": "^3.5.1",
+    "@capacitor/filesystem": "^1.1.0",
     "@capacitor/haptics": "1.1.3",
     "@capacitor/ios": "3.3.4",
     "@capacitor/keyboard": "1.2.0",
